--- a/content/quiz.yaml
+++ b/content/quiz.yaml
@@ -118,7 +118,7 @@ CoalescentHandson:
       answers:
         - type: value
           correct: true
-          range: 3.67
+          value: 3.67
           feedback: >-
             Correct. The total branch length is calculated as
             $2(1/(2-1) + 1/(3-1) + 1/(4-1)) = 2(1 + 1/2 + 1/3) = 11/3$
